finally. mix config is updated correctly so images dir is correctly referenced for gh pages

--- a/src/scss/components/deviceContent.scss
+++ b/src/scss/components/deviceContent.scss
@@ -71,19 +71,19 @@
 }
 
 #phone01 .device-img {
-    background: url("./images/iphone-xr-gallery2-201809.jpeg")
+    background: url("../../images/iphone-xr-gallery2-201809.jpeg")
 }
 
 #phone02 .device-img {
-    background: url("./images/iphone-xr-gallery3-201809.jpeg");
+    background: url("../../images/iphone-xr-gallery3-201809.jpeg");
 }
 
 #phone03 .device-img {
-    background: url("./images/iphone-xr-gallery4-201809.jpeg");
+    background: url("../../images/iphone-xr-gallery4-201809.jpeg");
 }
 
 #phone04 .device-img {
-    background: url("./images/iphone-xr-gallery5-201809.jpeg");
+    background: url("../../images/iphone-xr-gallery5-201809.jpeg");
 }
 
 .scrollmagic-pin-spacer {
