--- a/src/scss/components/structure.scss
+++ b/src/scss/components/structure.scss
@@ -31,14 +31,14 @@
     }
 }
 
-.column-50 {
+.column-md50 {
     display: flex;
-    min-width: 50%;
-    flex: 1 1 50%;
+    width: 100%;
     flex-direction: column;
+    margin: 0 auto;
 
     @media screen and (min-width: 768px) {
-        min-width: 50%;
+        max-width: 50%;
     }
 }
 
